experiment:final analysis in demo notebook for complete report

--- a/index.html
+++ b/index.html
@@ -28,16 +28,60 @@
 <body>
 	<div id="container">
 		<select id="directorySelect" onchange="changeDirectory()">
-            <option value="exp13-pe-0.05-grid-N20__obstacles-0.2__maxsteps-100__policy-random__dummy-False">exp13-pe-0.05-grid-N20__obstacles-0.2__maxsteps-100__policy-random__dummy-False</option>
             <option value="exp13-pe-0.4-grid-N20__obstacles-0.2__maxsteps-100__policy-random__dummy-False">exp13-pe-0.4-grid-N20__obstacles-0.2__maxsteps-100__policy-random__dummy-False</option>
+            <option value="exp14-pe-0.0-grid-N20__obstacles-0.3__maxsteps-100__policy-random__dummy-False">exp14-pe-0.0-grid-N20__obstacles-0.3__maxsteps-100__policy-random__dummy-False</option>
+            <option value="exp14-pe-0.05-grid-N20__obstacles-0.3__maxsteps-100__policy-random__dummy-False">exp14-pe-0.05-grid-N20__obstacles-0.3__maxsteps-100__policy-random__dummy-False</option>
+            <option value="exp14-pe-0.4-grid-N20__obstacles-0.3__maxsteps-100__policy-random__dummy-False">exp14-pe-0.4-grid-N20__obstacles-0.3__maxsteps-100__policy-random__dummy-False</option>
+            <option value="exp15-init-center-pe-0.05-grid-N20__obstacles-0.3__maxsteps-100__policy-random__dummy-False">exp15-init-center-pe-0.05-grid-N20__obstacles-0.3__maxsteps-100__policy-random__dummy-False</option>
+            <option value="exp15-init-uniform-pe-0.05-grid-N20__obstacles-0.3__maxsteps-100__policy-random__dummy-False">exp15-init-uniform-pe-0.05-grid-N20__obstacles-0.3__maxsteps-100__policy-random__dummy-False</option>
             <option value="grid-N20__obstacles-0.0__maxsteps-100__policy-random__dummy-False">grid-N20__obstacles-0.0__maxsteps-100__policy-random__dummy-False</option>
             <option value="grid-N20__obstacles-0.1__maxsteps-100__policy-random__dummy-False-viterbi1">grid-N20__obstacles-0.1__maxsteps-100__policy-random__dummy-False-viterbi1</option>
             <option value="grid-N20__obstacles-0.1__maxsteps-100__policy-random__dummy-False-viterbi2">grid-N20__obstacles-0.1__maxsteps-100__policy-random__dummy-False-viterbi2</option>
-            <option value="grid-N20__obstacles-0.1__maxsteps-100__policy-random__dummy-False11-pe4">grid-N20__obstacles-0.1__maxsteps-100__policy-random__dummy-False11-pe4</option>
-            <option value="grid-N20__obstacles-0.2__maxsteps-100__policy-random__dummy-False12-pe4">grid-N20__obstacles-0.2__maxsteps-100__policy-random__dummy-False12-pe4</option>
-            <option value="grid-N20__obstacles-0.3__maxsteps-100__policy-random__dummy-False10-pe0">grid-N20__obstacles-0.3__maxsteps-100__policy-random__dummy-False10-pe0</option>
-            <option value="grid-N20__obstacles-0.3__maxsteps-100__policy-random__dummy-False8">grid-N20__obstacles-0.3__maxsteps-100__policy-random__dummy-False8</option>
-            <option value="grid-N20__obstacles-0.3__maxsteps-100__policy-random__dummy-False9-pe4">grid-N20__obstacles-0.3__maxsteps-100__policy-random__dummy-False9-pe4</option>
+            <option value="quant-N20-pe0.0-run0">quant-N20-pe0.0-run0</option>
+            <option value="quant-N20-pe0.0-run1">quant-N20-pe0.0-run1</option>
+            <option value="quant-N20-pe0.0-run2">quant-N20-pe0.0-run2</option>
+            <option value="quant-N20-pe0.0-run3">quant-N20-pe0.0-run3</option>
+            <option value="quant-N20-pe0.0-run4">quant-N20-pe0.0-run4</option>
+            <option value="quant-N20-pe0.05-run0">quant-N20-pe0.05-run0</option>
+            <option value="quant-N20-pe0.05-run1">quant-N20-pe0.05-run1</option>
+            <option value="quant-N20-pe0.05-run2">quant-N20-pe0.05-run2</option>
+            <option value="quant-N20-pe0.05-run3">quant-N20-pe0.05-run3</option>
+            <option value="quant-N20-pe0.05-run4">quant-N20-pe0.05-run4</option>
+            <option value="quant-N20-pe0.4-run0">quant-N20-pe0.4-run0</option>
+            <option value="quant-N20-pe0.4-run1">quant-N20-pe0.4-run1</option>
+            <option value="quant-N20-pe0.4-run2">quant-N20-pe0.4-run2</option>
+            <option value="quant-N20-pe0.4-run3">quant-N20-pe0.4-run3</option>
+            <option value="quant-N20-pe0.4-run4">quant-N20-pe0.4-run4</option>
+            <option value="quant-N25-pe0.0-run0">quant-N25-pe0.0-run0</option>
+            <option value="quant-N25-pe0.0-run1">quant-N25-pe0.0-run1</option>
+            <option value="quant-N25-pe0.0-run2">quant-N25-pe0.0-run2</option>
+            <option value="quant-N25-pe0.0-run3">quant-N25-pe0.0-run3</option>
+            <option value="quant-N25-pe0.0-run4">quant-N25-pe0.0-run4</option>
+            <option value="quant-N25-pe0.05-run0">quant-N25-pe0.05-run0</option>
+            <option value="quant-N25-pe0.05-run1">quant-N25-pe0.05-run1</option>
+            <option value="quant-N25-pe0.05-run2">quant-N25-pe0.05-run2</option>
+            <option value="quant-N25-pe0.05-run3">quant-N25-pe0.05-run3</option>
+            <option value="quant-N25-pe0.05-run4">quant-N25-pe0.05-run4</option>
+            <option value="quant-N25-pe0.4-run0">quant-N25-pe0.4-run0</option>
+            <option value="quant-N25-pe0.4-run1">quant-N25-pe0.4-run1</option>
+            <option value="quant-N25-pe0.4-run2">quant-N25-pe0.4-run2</option>
+            <option value="quant-N25-pe0.4-run3">quant-N25-pe0.4-run3</option>
+            <option value="quant-N25-pe0.4-run4">quant-N25-pe0.4-run4</option>
+            <option value="quant-N30-pe0.0-run0">quant-N30-pe0.0-run0</option>
+            <option value="quant-N30-pe0.0-run1">quant-N30-pe0.0-run1</option>
+            <option value="quant-N30-pe0.0-run2">quant-N30-pe0.0-run2</option>
+            <option value="quant-N30-pe0.0-run3">quant-N30-pe0.0-run3</option>
+            <option value="quant-N30-pe0.0-run4">quant-N30-pe0.0-run4</option>
+            <option value="quant-N30-pe0.05-run0">quant-N30-pe0.05-run0</option>
+            <option value="quant-N30-pe0.05-run1">quant-N30-pe0.05-run1</option>
+            <option value="quant-N30-pe0.05-run2">quant-N30-pe0.05-run2</option>
+            <option value="quant-N30-pe0.05-run3">quant-N30-pe0.05-run3</option>
+            <option value="quant-N30-pe0.05-run4">quant-N30-pe0.05-run4</option>
+            <option value="quant-N30-pe0.4-run0">quant-N30-pe0.4-run0</option>
+            <option value="quant-N30-pe0.4-run1">quant-N30-pe0.4-run1</option>
+            <option value="quant-N30-pe0.4-run2">quant-N30-pe0.4-run2</option>
+            <option value="quant-N30-pe0.4-run3">quant-N30-pe0.4-run3</option>
+            <option value="quant-N30-pe0.4-run4">quant-N30-pe0.4-run4</option>
 		</select>
 		<div class="controls">
 			<button onclick="prevFrame()">Previous</button>
@@ -48,10 +92,10 @@
 			<button onclick="toggleReset()">Reset</button>
 		</div>
 	</div>
-	<img id="sequence" src="results/exp13-pe-0.05-grid-N20__obstacles-0.2__maxsteps-100__policy-random__dummy-False/frame-0.png">
+	<img id="sequence" src="results/exp13-pe-0.4-grid-N20__obstacles-0.2__maxsteps-100__policy-random__dummy-False/frame-0.png">
 
 	<script>
-		let currentDirectory = "exp13-pe-0.05-grid-N20__obstacles-0.2__maxsteps-100__policy-random__dummy-False"; // initial directory
+		let currentDirectory = "exp13-pe-0.4-grid-N20__obstacles-0.2__maxsteps-100__policy-random__dummy-False"; // initial directory
 		let numFrames = 0;
 		let currentFrame = 0;
 		let isPlaying = false;
