--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
 		<select id="directorySelect" onchange="changeDirectory()">
             <option value="exp13-pe-0.05-grid-N20__obstacles-0.2__maxsteps-100__policy-random__dummy-False">exp13-pe-0.05-grid-N20__obstacles-0.2__maxsteps-100__policy-random__dummy-False</option>
             <option value="exp13-pe-0.4-grid-N20__obstacles-0.2__maxsteps-100__policy-random__dummy-False">exp13-pe-0.4-grid-N20__obstacles-0.2__maxsteps-100__policy-random__dummy-False</option>
+            <option value="exp14-pe-0.05-grid-N20__obstacles-0.2__maxsteps-100__policy-random__dummy-False">exp14-pe-0.05-grid-N20__obstacles-0.2__maxsteps-100__policy-random__dummy-False</option>
             <option value="grid-N20__obstacles-0.0__maxsteps-100__policy-random__dummy-False">grid-N20__obstacles-0.0__maxsteps-100__policy-random__dummy-False</option>
             <option value="grid-N20__obstacles-0.1__maxsteps-100__policy-random__dummy-False-viterbi1">grid-N20__obstacles-0.1__maxsteps-100__policy-random__dummy-False-viterbi1</option>
             <option value="grid-N20__obstacles-0.1__maxsteps-100__policy-random__dummy-False-viterbi2">grid-N20__obstacles-0.1__maxsteps-100__policy-random__dummy-False-viterbi2</option>
